--- a/SViT/pnr_clips/ed6ede34-2134-427f-ae4c-ff5b554b6596-320_9-328_9/index.html
+++ b/SViT/pnr_clips/ed6ede34-2134-427f-ae4c-ff5b554b6596-320_9-328_9/index.html
@@ -1,5 +1,4 @@
-CTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<img src="ed6ede34-2134-427f-ae4c-ff5b554b6596-320_9-328_9.gif" align="middle" width="300">
+<!DOCTYPE HTML>
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </html>
 
