--- a/SViT/pnr_clips/ed6ede34-2134-427f-ae4c-ff5b554b6596-320_9-328_9/index.html
+++ b/SViT/pnr_clips/ed6ede34-2134-427f-ae4c-ff5b554b6596-320_9-328_9/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html>
+<img src="ed6ede34-2134-427f-ae4c-ff5b554b6596-320_9-328_9.gif">
 </html>
 
