--- a/SViT/pnr_clips/positive/index.html
+++ b/SViT/pnr_clips/positive/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE HTML>
 <html>
-<img src="ed6ede34-2134-427f-ae4c-ff5b554b6596-320_9-328_9.gif">
+  <body>
+    uid: ed6ede34-2134-427f-ae4c-ff5b554b6596-320_9-328_9, Predicted Frame: 102.375, PNR Frame: 230, Temporal Localization Error (seconds): 4.236
+    <img src="ed6ede34-2134-427f-ae4c-ff5b554b6596-320_9-328_9.gif" align="middle">
+  </body>
 </html>
 
