--- a/SViT/pnr_clips/negative/index.html
+++ b/SViT/pnr_clips/negative/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE HTML>
 <html>
   <body>
-    uid: ed6ede34-2134-427f-ae4c-ff5b554b6596-320_9-328_9, Predicted Frame: 102.375, PNR Frame: 230, Temporal Localization Error (seconds): 4.236
+    1. Predicted PNR Time: 3.398, PNR Time: 7.634, Error (seconds): 4.236
     <center><img src="ed6ede34-2134-427f-ae4c-ff5b554b6596-320_9-328_9.gif" align="middle"></center>
+
+    2. Predicted PNR Time: 3.048, PNR Time: 6.9, Error (seconds): 3.852
+    <center><img src="2d36f6bf-4f8c-4671-b160-e5aa640f570a-634_6210286-642_6210286.gif" align="middle"></center>
   </body>
 </html>
 
