--- a/SViT/pnr_clips/positive/index.html
+++ b/SViT/pnr_clips/positive/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
   <body>
-    uid: ed6ede34-2134-427f-ae4c-ff5b554b6596-320_9-328_9, Predicted Frame: 102.375, PNR Frame: 230, Temporal Localization Error (seconds): 4.236
-    <center><img src="ed6ede34-2134-427f-ae4c-ff5b554b6596-320_9-328_9.gif" align="middle"></center>
+    1. Predicted PNR Time: 3.223, PNR Time: 3.219, Error (seconds): 0.004
+    <center><img src="e0aed459-2728-4fe0-8f8c-fe49d86088ac-2008_1666666666667-2016_1666666666667.gif" align="middle"></center>
   </body>
 </html>
 
