--- a/SViT/pnr_clips/positive/index.html
+++ b/SViT/pnr_clips/positive/index.html
@@ -3,6 +3,8 @@
   <body>
     1. Predicted PNR Time: 3.223, PNR Time: 3.219, Error (seconds): 0.004
     <center><img src="e0aed459-2728-4fe0-8f8c-fe49d86088ac-2008_1666666666667-2016_1666666666667.gif" align="middle"></center>
+    2. Predicted PNR Time: 3.063, PNR Time: 3.052, Error (seconds): 0.01
+    <center><img src="ce8b02d6-6904-4f8e-85ce-ab37884dbf29-3668_2543619333333-3676_2543619333333.gif" align="middle"></center>
   </body>
 </html>
 
