--- a/SViT/index.html
+++ b/SViT/index.html
@@ -172,12 +172,12 @@
         <tr>
             <td align=center>
                 <center>
-                    <span style="font-size:20px"><a href="https://arxiv.org/abs/2110.06915"> [Paper]</a></span>
+                    <span style="font-size:20px"><a href="TODO"> [Paper]</a></span>
                 </center>
             </td>
             <td align=center>
                 <center>
-                        <span style="font-size:20px"><a href='https://github.com/roeiherz/ORViT'> [GitHub]</a></span>
+                        <span style="font-size:20px"><a href='https://github.com/eladb3/SViT'> [GitHub]</a></span>
                 </center>
             </td>
             <td align=center>
@@ -188,7 +188,7 @@
         </tr>
     </table>
 <br><br><br>
-<center><img src="data/figures/teaser.png" align="middle" width="400" height="500" ></center></center>
+<center><img src="data/figures/teaser_prompting5.pdf" align="middle" width="400" height="500" ></center></center>
 <br><br>
 Our ORViT model incorporates object information into video transformer layers.
 The figure shows the standard (uniformly spaced) transformer patch-tokens in <span style="color:Blue;">blue</span>,
