--- a/SViT/index.html
+++ b/SViT/index.html
@@ -299,15 +299,14 @@ Last, the final video downstream task prediction results from applying a video d
 <table align=center width=850px>
     <center><h1>Visualizations</h1></center>
 </table>
-<!-- <table>
+<table>
     <tr>
         <center>
-            <img src="data/figures/vis_figure1.png"/></center>
-        <p> <b>Attention Maps</b> comparison between the <i>ORViT+Mformer</i> and the <i>Mformer</i> on videos from the SSv2 dataset.
-            The visualization shows the attention maps corresponding to the CLS query.</p>
+            <img src="data/figures/vis.png"/></center>
+        <p> <b>Hand-Object Graphs</b> detected by SViT.</p>
     </tr>
 </table>
-<br><br> -->
+<br><br>
 
 <br>
 
