--- a/SViT/index.html
+++ b/SViT/index.html
@@ -185,7 +185,10 @@
     </table>
 <br><br><br>
 <!-- <center><img src="data/figures/teaser_prompting_resized.png" align="middle" width="400" height="500" ></center></center> -->
-<center><img src="data/figures/teaser_prompting_resized.png" align="middle"></center></center>
+<!-- <center><img src="data/figures/teaser_prompting_resized.png" align="middle"></center></center> -->
+<!-- <center><embed src="data/figures/teaser_prompting5.pdf" align="middle"></center></center> -->
+<center><embed src="data/figures/teaser_prompting5.pdf" type=”application/pdf” /></center></center>
+<!-- <iframe src="data/figures/teaser_prompting5.pdf"></iframe> -->
 <br><br>
 Our approach SViT brings structured scene representations from still images into video.
 We use the <bf>HA</bf>nd-<bf>O</bf>bject <bf>G</bf>raph (HAOG) annotations of still images that are only available during training,
