--- a/SViT/index.html
+++ b/SViT/index.html
@@ -273,11 +273,12 @@ and physical relations of contact/no-contact as edges. SViT shows strong perform
     As mentioned above, our motivation is to bring scene structure from still images into video. 
     In order to achieve this, 
     one component of this work is the construction of a semantic representation of the interactions between the hands and objects in the scene. 
-    Specifically, we propose to use a graph-structure we <i>Hand-Object Graph</i>{} (HAOG). 
+    Specifically, we propose to use a graph-structure we <i>Hand-Object Graph</i> (HAOG). 
     The nodes of the HAOG represent two hands and two objects with their locations, whereas the edges correspond to physical properties such as contact/no contact. 
 </p>
 
-<center><img src="data/figures/haog.png" width="40%" height="40%" align="middle"></center>
+<!-- <center><img src="data/figures/haog.png" width="40%" height="40%" align="middle"></center> -->
+<center><img src="data/figures/haog.png" align="middle"></center>
 <hr><br>
 <table align=center>
     <center><h1 id="model">SViT</h1></center>
