--- a/SViT/index.html
+++ b/SViT/index.html
@@ -277,8 +277,8 @@ and physical relations of contact/no-contact as edges. SViT shows strong perform
     The nodes of the HAOG represent two hands and two objects with their locations, whereas the edges correspond to physical properties such as contact/no contact. 
 </p>
 
-<!-- <center><img src="data/figures/haog.png" width="40%" height="40%" align="middle"></center> -->
-<center><img src="data/figures/haog.png" align="middle"></center>
+<center><img src="data/figures/haog.png" width="40%" height="40%" align="middle"></center>
+<!-- <center><img src="data/figures/haog.png" align="middle"></center> -->
 <hr><br>
 <table align=center>
     <center><h1 id="model">SViT</h1></center>
