--- a/SViT/index.html
+++ b/SViT/index.html
@@ -137,7 +137,7 @@
         <tr>
             <span style="font-size:20px"><a href="http://www.amirbar.net/">Amir Bar</a><sup>1</sup></span> &nbsp;
             <span style="font-size:20px"><a href="https://anna-rohrbach.net/">Anna Rohrbach</a><sup>2</sup></span> &nbsp;
-            <span style="font-size:20px"><a href="https://www.linkedin.com/in/leonid-karlinsky-5a80491">Leonid Karlinsky</a><sup>3</sup></span> &nbsp;
+            <span style="font-size:20px"><a href="https://www.linkedin.com/in/leonid-karlinsky-5a80491">Leonid Karlinsky</a><sup>4</sup></span> &nbsp;
 <!--        </tr><br>-->
 <!--        <tr>-->
             <span style="font-size:20px"><a href="https://people.eecs.berkeley.edu/~trevor/">Trevor Darrell</a><sup>2</sup></span> &nbsp;
@@ -153,7 +153,7 @@
             <td align=center>
                 <center>
                     <span style="font-size:20px">
-                        <sup>1</sup>Tel-Aviv University &nbsp;<sup>2</sup>UC Berkeley &nbsp;<sup>3</sup>IBM Research
+                        <sup>1</sup>Tel-Aviv University &nbsp;<sup>2</sup>UC Berkeley &nbsp;<sup>3</sup>IBM Research;<sup>4</sup>MIT-IBM AI-Watson Lab
                     </span>
                 </center>
             </td>
@@ -287,7 +287,7 @@ and physical relations of contact/no-contact as edges. SViT shows strong perform
     The nodes of the HAOG represent two hands and two objects with their locations, whereas the edges correspond to physical properties such as contact/no contact. 
 </p> -->
 
-<center><img src="data/figures/haog.png" width="40%" height="40%" align="middle"></center>
+<center><img src="data/figures/haog.png" width="400cm" height="279cm" align="middle"></center>
 <p><center>Visualization of <b>Hand-Object Graph</b> (HAOG).</center></p>
 <!-- <center><img src="data/figures/haog.png" align="middle"></center> -->
 <br><hr>
@@ -343,25 +343,23 @@ Last, the final video downstream task prediction results from applying a video d
     </tr>
 </table>
 <hr>
-<table align=center style="margin-bottom: 50px">
+
+<table align=center>
     <tr>
         <td>
             <center><h1>Related Works</h1></center>
-            Our work builds and borrows code from <a href="https://github.com/facebookresearch/MViT">MViT</a>. If you found our work helpful, consider citing MViT as well.
+            <p>Our work builds and borrows code from <a href="https://github.com/facebookresearch/MViT">MViT</a>. If you found our work helpful, consider citing MViT as well.</p>
         </td>
     </tr>
 </table>
 
 <hr>
-<table align=center style="margin-bottom: 50px">
-    <tr>
-        <td>
-            <left>
+<table align=center>
+    <p>
                 <center><h1>Acknowledgements</h1></center>
             <!-- We would like to thank Tete Xiao, Medhini Narasimhan, Rodolfo (Rudy) Corona, and Colorado Reed for helpful feedback and discussions. -->
-                This project has received funding from the European Research Council (ERC) under the European Unions Horizon 2020 research and innovation programme (grant ERC HOLI 819080).
-                Prof. Darrell’s group was supported in part by DoD including DARPA's XAI, and LwLL programs,  as well as BAIR's industrial alliance programs.
-            </left>
+                <p>This project has received funding from the European Research Council (ERC) under the European Unions Horizon 2020 research and innovation programme (grant ERC HOLI 819080).
+                Prof. Darrell’s group was supported in part by DoD including DARPA's XAI, and LwLL programs,  as well as BAIR's industrial alliance programs.</p>
         </td>
     </tr>
 </table>
