--- a/SViT/index.html
+++ b/SViT/index.html
@@ -153,7 +153,7 @@
             <td align=center>
                 <center>
                     <span style="font-size:20px">
-                        <sup>1</sup>Tel-Aviv University &nbsp;<sup>2</sup>UC Berkeley &nbsp;<sup>3</sup>IBM Research;<sup>4</sup>MIT-IBM AI-Watson Lab
+                        <sup>1</sup>Tel-Aviv University &nbsp;<sup>2</sup>UC Berkeley &nbsp;<sup>3</sup>IBM Research &nbsp;<sup>4</sup>MIT-IBM AI-Watson Lab
                     </span>
                 </center>
             </td>
@@ -168,7 +168,7 @@
         <tr>
             <td align=center>
                 <center>
-                    <span style="font-size:20px"><a href="TODOARXIV"> [Paper]</a></span>
+                    <span style="font-size:20px"><a href="https://arxiv.org/pdf/2206.06346.pdf"> [Paper]</a></span>
                 </center>
             </td>
             <td align=center>
@@ -329,17 +329,17 @@ Last, the final video downstream task prediction results from applying a video d
 <table align=center>
     <center><h1>Paper</h1></center>
     <tr>
-        <td><a href="TODOARXIV.pdf"><img class="layered-paper-big" style="height:175px; width: 150px; margin-bottom: 50px"
-                                                                src="data/figures/paper.png"/></a></td>
-        <td><a href="TODOARXIV.pdf"></a></td>
+        <td><a href="https://arxiv.org/pdf/2206.06346.pdf"><img class="layered-paper-big" style="height:175px; width: 150px; margin-bottom: 50px"
+                                                                src="data/figures/paper.JPG"/></a></td>
+        <td><a href="https://arxiv.org/pdf/2206.06346.pdf"></a></td>
         <td>
                 <span style="font-size:14pt">  Elad Ben-Avraham, Roei Herzig, Karttikeya Mangalam, Amir Bar, Leonid Karlinsky, Anna Rohrbach, Trevor Darrell, Amir Globerson<br>
               <i>Bringing Image Scene Structure to Video via Frame-Clip Consistency of Object Tokens</i><br>
             <!-- Arxiv<br> -->
-            Hosted on <a href="TODOARXIV">arXiv</a>
+            Hosted on <a href="https://arxiv.org/abs/2206.06346">arXiv</a>
                 </span>
         </td>
-        <span style="font-size:4pt"><a href="TODOARXIV.pdf"><br></a></span>
+        <span style="font-size:4pt"><a href="https://arxiv.org/pdf/2206.06346.pdf"><br></a></span>
     </tr>
 </table>
 <hr>
