--- a/SViT/index.html
+++ b/SViT/index.html
@@ -105,14 +105,15 @@
 
 
 <head>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108048997-1"></script>
-  <script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-126XCP03X1"></script>
+    <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'UA-108048997-1');
-  </script>
+    gtag('config', 'G-126XCP03X1');
+    </script>
 
     <title>SViT</title>
     <meta property="og:title" content="Object-Region Video Transformers"/>
@@ -186,6 +187,8 @@
 <br><br><br>
 <!-- <center><img src="data/figures/teaser_prompting_resized.png" align="middle" width="400" height="500" ></center></center> -->
 <center><img src="data/figures/teaser_prompting_resized.png" align="middle" width="100%"></center></center>
+
+
 <!-- <center><embed src="data/figures/teaser_prompting5.pdf" align="middle"></center></center> -->
 <!-- <center><embed src="data/figures/teaser_prompting5.pdf" width="500px" height="500px"></center></center> -->
 <!-- <iframe src="data/figures/teaser_prompting5.pdf"></iframe> -->
@@ -251,6 +254,7 @@ and physical relations of contact/no-contact as edges. SViT shows strong perform
     which is particularly well suited for transformer architectures and offers an effective mechanism to leverage image structure to improve video transformers.
 </p>
 <!-- <center><img src="data/videos/motivation.gif" align="middle" width="300"></center> -->
+<!-- <center><img src="data/figures/VID7_break.gif" align="middle" width="80%"></center> -->
 
 
 <!--        Model Section-->
