--- a/SViT/index.html
+++ b/SViT/index.html
@@ -142,7 +142,7 @@
 <!--        </tr><br>-->
 <!--        <tr>-->
             <span style="font-size:20px"><a href="https://people.eecs.berkeley.edu/~trevor/">Trevor Darrell</a><sup>2</sup></span> &nbsp;
-            <span style="font-size:20px"><a href="http://www.cs.tau.ac.il/~gamir/">Amir Globerson</a><sup>1</sup></span> &nbsp;
+            <span style="font-size:20px"><a href="http://www.cs.tau.ac.il/~gamir/">Amir Globerson</a><sup>1,5</sup></span> &nbsp;
         </tr>
     </table>
 
@@ -154,7 +154,11 @@
             <td align=center>
                 <center>
                     <span style="font-size:20px">
-                        <sup>1</sup>Tel-Aviv University &nbsp;<sup>2</sup>UC Berkeley &nbsp;<sup>3</sup>IBM Research &nbsp;<sup>4</sup>MIT-IBM AI-Watson Lab
+                        <sup>1</sup>Tel-Aviv University &nbsp;
+                        <sup>2</sup>UC Berkeley &nbsp;
+                        <sup>3</sup>IBM Research &nbsp;
+                        <sup>4</sup>MIT-IBM Lab &nbsp;
+                        <sup>5</sup>Google Research
                     </span>
                 </center>
             </td>
