--- a/SViT/index.html
+++ b/SViT/index.html
@@ -125,7 +125,7 @@
     <span style="font-size:36px">Bringing Image Scene Structure to Video via Frame-Clip Consistency of Object Tokens</span>
     <br>
     <br>
-    <!-- <span style="font-size:22px">NeurIPS 2022</span> -->
+    <span style="font-size:22px">NeurIPS 2022</span>
     <br>
     <br>
 <!--    <br>-->
