--- a/SViT/index.html
+++ b/SViT/index.html
@@ -183,6 +183,11 @@
             </td>
             <td align=center>
                 <center>
+                        <span style="font-size:20px"><a href='https://eladb3.github.io/SViT/data/figures/VID7_break.gif'> [SViT Framework Animated]</a></span>
+                </center>
+            </td>
+            <td align=center>
+                <center>
                         <span style="font-size:20px"><a href='data/2022SViT.txt'> [Bibtex]</a></span>
                 </center>
             </td>
